--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 
-
+    
 services:
   - docker                  
 
@@ -9,8 +9,8 @@ before_install:
   - docker pull asciidoctor/docker-asciidoctor
 
 script:
-  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-html asciidoctor/docker-asciidoctor asciidoctor -D /documents/output *.adoc      
-  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-pdf asciidoctor/docker-asciidoctor asciidoctor-pdf -D /documents/output *.adoc    
+  - docker run -v $TRAVIS_BUILD_DIR:/src/ --name asciidoc-to-html asciidoctor/docker-asciidoctor asciidoctor -D /target *.adoc      
+  - docker run -v $TRAVIS_BUILD_DIR:/src/ --name asciidoc-to-pdf asciidoctor/docker-asciidoctor asciidoctor-pdf -D /target *.adoc    
 
 after_error: 
   - docker logs asciidoc-to-html
